fix: btn-primary contrast

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -17,7 +17,7 @@ button,
 }
 .btn-primary {
     background-color: rgba( var(--color-primary), 1);
-    color: rgba( var(--color-white), 1 );
+    color: rgba( var(--color-black), 1 );
 }
 .btn-secondary {
     background-color: rgba( var(--color-secondary), 1);
